# human-in-the-loop

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: discord.md  slack.md
src/: discord.rs  main.rs  mcp_handler.rs  slack.rs  tools.rs
